# Lemonade-HA

./: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml  hacs.json  pyproject.toml  repository.yaml
custom_components/lemonade_ha/: __init__.py  client.py  config_flow.py  const.py  conversation.py  manifest.json  strings.json  stt.py  tts.py
lemonade-wyoming/: CHANGELOG.md  Dockerfile  config.yaml  pyproject.toml
lemonade-wyoming/custom_components/lemonade_wyoming/: manifest.json
lemonade-wyoming/rootfs/etc/s6-overlay/s6-rc.d/lemonade-wyoming/: run
lemonade-wyoming/wyoming_lemonade/: __main__.py  const.py  llm_handler.py  server.py
lemonade_bridge/: __init__.py  __main__.py  const.py  server.py  stt_handler.py  tts_handler.py
rootfs/etc/s6-overlay/s6-rc.d/lemonade-ha/: run
translations/: en.yaml
