[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lemonade-ha"
version = "0.3.3"
description = "Home Assistant integration for Lemonade local AI — STT, TTS, and conversation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Lemonade Community"},
]
dependencies = [
    "wyoming>=1.8,<2",
    "httpx>=0.24",
]

[project.optional-dependencies]
zeroconf = ["wyoming[zeroconf]"]

[project.scripts]
lemonade-ha = "lemonade_bridge.__main__:run"

[tool.setuptools.packages.find]
include = ["lemonade_bridge*"]
